grml-scripts (1.1.17) unstable; urgency=low

  [ Ulrich Dangel ]
  * osd_server.py uses now the freedesktop.org specification for
    notification instead of the old xosd way.
  * Added python-dbus and notification-daemon as suggestion as
    osd_server.py depends on them.
    [Closes: issue172]

 -- Michael Prokop <mika@grml.org>  Thu, 12 Feb 2009 19:26:04 +0100

grml-scripts (1.1.16) unstable; urgency=low

  [ Michael Prokop ]
  * Drop orphaned mutt-ng from Suggests.
  [ Alexander Steinböck ]
  * grml-hostname: Builtin `source' not available in dash(1).

 -- Michael Prokop <mika@grml.org>  Thu, 29 Jan 2009 17:07:48 +0100

grml-scripts (1.1.15) unstable; urgency=low

  [ Michael Gebetsroither ]
  * grml-chroot:
    - display usage information additionally to wrong number of arguments
    - send all parameters to chroot [thx Tong Sun <suntong@cpan.org>
      for initial patches]

 -- Michael Prokop <mika@grml.org>  Sun, 30 Nov 2008 15:13:20 +0100

grml-scripts (1.1.14) unstable; urgency=low

  * Remove arename.pl, thanks ft.
    [Closes: issue574] [Closes: issue435]

 -- Michael Prokop <mika@grml.org>  Sat, 29 Nov 2008 13:04:23 +0100

grml-scripts (1.1.13) unstable; urgency=low

  * grml-info: improve checks for present browsers.
    Thanks to Charles Hewson for the bugreport.

 -- Michael Prokop <mika@grml.org>  Sat, 15 Nov 2008 13:56:58 +0100

grml-scripts (1.1.12) unstable; urgency=low

  * swspeak-setup: start speech-dispatcher before executing speechd-up,
    do not execute flite on success, otherwise we get tons of
    "wave_open_sound > Pa_OpenStream : err=-9996 (Invalid device)" error
    messages (sic).

 -- Michael Prokop <mika@grml.org>  Mon, 03 Nov 2008 14:06:15 +0100

grml-scripts (1.1.11) unstable; urgency=low

  * New script swspeak-setup for activating software speak(up) features
  * Fix typos in grml-chroot manpage.
  * Update VCS-headers (we're using git nowadays).

 -- Michael Prokop <mika@grml.org>  Mon, 03 Nov 2008 00:03:57 +0100
